--- a/produtos.html
+++ b/produtos.html
@@ -10,7 +10,7 @@
             <img src="assets/imagens/logo.png" title="UrbanWRLD" class="logo"/>
             <nav>
                 <ul>
-                    <li><a href="file:///U:/DSV%20Mobile/Site%20Urban%20WRLD/index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="">Contato</a></li>
                 </ul>
             </nav>
